fixed z-index on header

--- a/src/features/calendar/components/CustomCalendar/CustomCalendar.module.scss
+++ b/src/features/calendar/components/CustomCalendar/CustomCalendar.module.scss
@@ -107,7 +107,7 @@
 }
 
 .mainCalendarContainer {
-  height: 75vh;
+  height: 90vh;
   flex: 1;
 }
 
